feat: add send notification feature
